--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -605,6 +605,11 @@
     @Html.Raw(commonInfo.PageScript)
 
     @commonInfo.Footer
+    <style>
+        #menu-d-electronics li,#ovic-menu-clone-menu-d-electronics .menu-item{
+            padding-left:10px;
+        }
+    </style>
     @Html.Raw(commonInfo.AnperoPlugin)
     <script type="text/javascript">
         $(document).ready(function () {
