--- a/16_Shop_MultiProduct/theme/wp-content/themes/gokko/assets/css/style.css
+++ b/16_Shop_MultiProduct/theme/wp-content/themes/gokko/assets/css/style.css
@@ -5804,6 +5804,7 @@ a.yith-wcqv-button .blockUI.blockOverlay::before {
     color: #000;
     line-height: 20px;
     font-weight: 500;
+    margin: 0 5px 10px 5px;
 }
 .product-item .price,
 .entry-summary .price {
