--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -329,7 +329,7 @@
                                                      };
                                         var shortCat = newCat.OrderBy(x => x.rank).ToList();
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-mega-menu menu-item-has-children item-megamenu">
-                                            <a href="/product/sales" class="disable-link">Sản phẩm khuyến mại</a>
+                                            <a href="javascript:void(0);" class="disable-link">Sản phẩm khuyến mại</a>
                                             <div class="sub-menu megamenu" data-responsive=".header-responsive" style="width:1170px;z-index:99;">
                                                 <div class="vc_row wpb_row vc_row-fluid ovic_custom_5b763d890b4fd vc_custom_1534475649915">
                                                     <div class="wpb_column vc_column_container vc_col-sm-3"></div>
