--- a/16_Shop_MultiProduct/Views/Home/Policy.cshtml
+++ b/16_Shop_MultiProduct/Views/Home/Policy.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    AnperoFrontend.WebService.Webconfig commonInfo = new AnperoFrontend.WebService.Webconfig();    
+    AnperoFrontend.WebService.Webconfig commonInfo = new AnperoFrontend.WebService.Webconfig();
     if (ViewData["commonInfo"] != null)
     {
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
@@ -23,7 +23,7 @@
             <li><a href="/blog">Các chính sách</a></li>
             <li><span>@ViewBag.Title</span></li>
         </ul>
-      
+
     </div>
 </div>
 <div class="main-container col1-layout wow bounceInUp animated animated" style="visibility: visible;">
@@ -31,9 +31,57 @@
         <div class="std">
             <div class="wrapper_bl" style="margin-top: 1px;">
                 <div class="form_background">
-                        @Html.Raw(ViewBag.HtmlContent)
+                    @Html.Raw(ViewBag.HtmlContent)
                 </div>
             </div>
         </div>
     </div>
 </div>
+<style>
+    .vc_custom_1534841895972 {
+        margin-bottom: 60px !important;
+        padding-top: 200px !important;
+        padding-bottom: 267px !important;
+        background-image: url(https://cdn.anpero.com/images/54/12020/image2020012002404314.jpg) !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+        background-size: cover !important;
+    }
+
+    .vc_custom_1533525099580 {
+        margin-bottom: 36px !important;
+    }
+
+    .vc_custom_1533525112166 {
+        margin-bottom: 26px !important;
+    }
+
+    .vc_custom_1533525126017 {
+        margin-bottom: 36px !important;
+    }
+
+    .vc_custom_1534732886416 {
+        margin-bottom: 73px !important;
+        padding-top: 70px !important;
+        padding-bottom: 50px !important;
+        background-color: #fafafa !important;
+    }
+
+    .vc_custom_1533525381906 {
+        margin-bottom: 33px !important;
+    }
+</style>
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            if ($(".vc_bar").length) {
+                $(".vc_bar").each(function () {
+                    var percent = $(this).attr("data-value");
+                    $(this).animate({
+                        width:percent+ "%"
+                    }, 1000);
+                });
+            }
+        });
+    </script>
+}
